--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card"><h2>PARAGUAI</h2><p>Relatório da unidade Paraguai.</p><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>SAO PAULO</h2><p>Relatório da unidade São Paulo.</p><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>TEXTIL</h2><p>Produção e controle do setor têxtil.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>VESTUÁRIO</h2><p>Relatório completo do setor de vestuário.</p><a href="http://localhost:8501" target="_blank">Acessar</a></div>
+        <div class="card"><h2>VESTUÁRIO</h2><p>Relatório completo do setor de vestuário.</p><a href="https://dashboard-yl7v.onrender.com/" target="_blank">Acessar</a></div>
     </main>
 
     <footer>
@@ -101,3 +101,4 @@
     </footer>
 </body>
 </html>
+
