--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <title>Portal de Dashboards - Lunelli</title>
     <style>
         body {
@@ -74,26 +75,26 @@
 <body>
     <header>
         <h1>Portal de Dashboards</h1>
-        <p>Lunelli - Acesso rápido aos relatórios</p>
+        <p>Lunelli - Computadores</p>
     </header>
 
     <main>
         <div class="card"><h2>COMPARATIVO</h2><p>Resumo geral de todas as unidades.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>ABI</h2><p>Relatório da unidade ABI.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>AJD</h2><p>Relatório da unidade AJD.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>BENEFICIAMENTOS</h2><p>Dados e indicadores do setor de beneficiamentos.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>COMERCIAL</h2><p>Indicadores comerciais e de vendas.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>CONFECÇÃO</h2><p>Produção e desempenho do setor de confecção.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>ABI</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>AJD</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>BENEFICIAMENTOS</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>COMERCIAL<a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>CONFECÇÃO</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>FORA DO PADRÃO</h2><p>Máquinas fora das especificações.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>LND</h2><p>Relatório da unidade LND.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>LUIS ALVES</h2><p>Relatório da unidade Luis Alves.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>MSB</h2><p>Relatório da unidade MSB.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>NORDESTE</h2><p>Relatório da unidade Nordeste.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>OUT</h2><p>Relatório da unidade OUT.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>PARAGUAI</h2><p>Relatório da unidade Paraguai.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>SAO PAULO</h2><p>Relatório da unidade São Paulo.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>TEXTIL</h2><p>Produção e controle do setor têxtil.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>VESTUÁRIO</h2><p>Relatório completo do setor de vestuário.</p><a href="https://dashboard-yl7v.onrender.com/" target="_blank">Acessar</a></div>
+        <div class="card"><h2>LND</h2><p>LND.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>LUIS ALVES</h2><p>Luis Alves.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>MSB</h2><p>Massaranduba.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>NORDESTE</h2><p>Nordeste.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>OUT</h2><p>OUT.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>PARAGUAI</h2><p>Paraguai.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>SAO PAULO</h2><p>São Paulo.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>TEXTIL</h2><p>Têxtil.</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>VESTUÁRIO</h2><p>Vestuário.</p><a href="https://dashboard-yl7v.onrender.com/" target="_blank">Acessar</a></div>
     </main>
 
     <footer>
@@ -101,4 +102,5 @@
     </footer>
 </body>
 </html>
+
 
