--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="card"><h2>ABI</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>AJD</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>BENEFICIAMENTOS</h2><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>COMERCIAL<a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>COMERCIAL</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>CONFECÇÃO</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>FORA DO PADRÃO</h2><p>Máquinas fora das especificações.</p><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>LND</h2><p>LND.</p><a href="#" target="_blank">Acessar</a></div>
@@ -102,5 +102,6 @@
     </footer>
 </body>
 </html>
+
 
 
