--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
         <div class="card"><h2>COMERCIAL</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>CONFECÇÃO</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>FORA DO PADRÃO</h2><p>Máquinas fora das especificações.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>LND</h2><p>LND.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>LUIS ALVES</h2><p>Luis Alves.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>MSB</h2><p>Massaranduba.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>NORDESTE</h2><p>Nordeste.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>OUT</h2><p>OUT.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>PARAGUAI</h2><p>Paraguai.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>SAO PAULO</h2><p>São Paulo.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>TEXTIL</h2><p>Têxtil.</p><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>VESTUÁRIO</h2><p>Vestuário.</p><a href="https://dashboard-yl7v.onrender.com/" target="_blank">Acessar</a></div>
+        <div class="card"><h2>LND</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>LUIS ALVES</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>MASSARANDUBA</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>NORDESTE</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>OUT</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>PARAGUAI</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>SAO PAULO</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>TEXTIL</h2><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>VESTUÁRIO</h2><a href="https://dashboard-yl7v.onrender.com/" target="_blank">Acessar</a></div>
     </main>
 
     <footer>
@@ -102,6 +102,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
