--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="card"><h2>LND</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>LUIS ALVES</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>MASSARANDUBA</h2><a href="#" target="_blank">Acessar</a></div>
-        <div class="card"><h2>NORDESTE</p><a href="#" target="_blank">Acessar</a></div>
+        <div class="card"><h2>NORDESTE</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>OUT</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>PARAGUAI</h2><a href="#" target="_blank">Acessar</a></div>
         <div class="card"><h2>SAO PAULO</h2><a href="#" target="_blank">Acessar</a></div>
@@ -102,6 +102,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
